fix: search cancel button on mobile

--- a/src/theme/SearchBar/styles.css
+++ b/src/theme/SearchBar/styles.css
@@ -245,7 +245,7 @@
   }
 
   .DocSearch-Cancel {
-    display: none;
+    display: none !important;
   }
 
   .DocSearch-Footer {
